--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
     
     <!-- دریافت Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>1
+    <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- تنظیمات شخصی‌سازی Tailwind -->
     <script>
